# GB28181Client

./: .gitattributes  .gitignore  BUILD_FIX.md  BUILD_FIXED.md  BUILD_STATUS.md  CHECKLIST.md  CMakeLists.txt  COMPILE_GUIDE.md  GITHUB_ACTIONS.md  LICENSE  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_GITHUB.md  README.md  START_HERE.md  SUMMARY.md  TESTING.md  WINDOWS_BUILD.md  build.bat  build_vcpkg.bat  check_env.bat  install_deps_vcpkg.bat  upload_to_github.bat
.github/workflows/: build-fast.yml  build-simple.yml  build.yml  test-build.yml
include/: ChannelManager.h  DeviceManager.h  GB28181Server.h  GB28181Types.h  MainWindow.h  PsStreamParser.h  RtpReceiver.h  VideoDecoder.h
src/: ChannelManager.cpp  DeviceManager.cpp  GB28181Server.cpp  MainWindow.cpp  PsStreamParser.cpp  RtpReceiver.cpp  VideoDecoder.cpp  main.cpp
